Make sure the content doesn't stretch wider than the display, so mobile users can access the site correctly

--- a/entries/static/entries/css/h-entry.styl
+++ b/entries/static/entries/css/h-entry.styl
@@ -1,4 +1,5 @@
 ol.entries, div.entry
+	max-width 100%
 	display flex
 	margin-bottom 0
 	flex 1
